# lm75-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: conversion.rs  device_impl.rs  lib.rs  markers.rs  resolution.rs  sample_rate.rs
tests/: tests.rs
tests/common/: mod.rs
